# projet_snake

./: game.py  pyproject.toml  scores.py  snake_scores.yml
snake/: snake_scores.yml
snake_project/: __init__.py  exeptiob.py  hello.py  snakegame.py  tests.py
