[tool.poetry]
name = "snake-project"
version = "0.1.0"
description = ""
authors = ["Guillaume Coulomb <guillaume.coulomb@etu.minesparis.psl.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hello = "snake_project.hello:hello"
launch_snake="snake_project.snakegame:launch_snake"